[package]
name = "esp-idf-lstat-link-bug-repro"
version = "0.1.0"
authors = ["Euan Rochester <euan@rochester.me.uk>"]
edition = "2018"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
native = ["esp-idf-sys/native"]

[dependencies]
esp-idf-sys = { version = "0.28.1", features = ["binstart"] }


[build-dependencies]
embuild = "0.27"
anyhow = "1"
